# OrchCaml

./: OrchCaml.opam  README.md  dune-project  implementation_plan.md
lib/: chain.ml  config.ml  dune  memory.ml  parser.ml  prompt.ml  provider.ml  session.ml  template.ml  tool.ml  types.ml
lib/providers/: dune  ollama.ml  openai.ml
lib/tools/: dune  grep.ml  mkdir.ml  read_file.ml  sed.ml  touch.ml  write_file.ml
test/: dune  test_OrchCaml.ml
